--- a/scripts/3_summary_stats.Rmd
+++ b/scripts/3_summary_stats.Rmd
@@ -28,6 +28,8 @@ persistence_dat <- read_csv(file = paste0(p_dat_derived, "abn_decay_data", run_l
 area_dat <- read_csv(file = paste0(p_dat_derived, "area_dat", run_label, ".csv"))
 turnover_dat <- read_csv(file = paste0(p_dat_derived, "turnover_dat", run_label, ".csv"))
 
+site_df <- read.csv(file = paste0(p_dat_derived, "site_df.csv"))
+
 ```
 
 
@@ -144,6 +146,7 @@ summary_stats_all_sites$mean_of_means
 summary_stats_all_sites$sd_of_means
 summary_stats_all_sites$mean_of_sds
 
+sd(filter(mean_length_df, length_type == "all", abn_threshold == 5)$mean_duration)
 
 
 # ---------------------------------------------------------------- #
@@ -212,13 +215,15 @@ vt <- length_distill_df %>% as_tibble() %>%
     filter(length >= 5,
            # site == "shaanxi",
            length_type == "all") %>% # to filter by length # this is important for max, since some pixels have max length of 0 
-  mutate(fr = round(freq#/100000
+  mutate(fr = round(freq/10000
                     , 
                     digits = 0)) %>% 
   group_by(site) %>%
   summarise(site = unique(site), 
             length = rep(length, fr),
             mean = mean(length))
+
+# rm(vt)
 
 vt <- vt %>%
   left_join(., vt %>% ungroup() %>%
@@ -227,46 +232,27 @@ vt <- vt %>%
 
 # Fancy violin plots
 
-ggplot(data = vt, mapping = aes(x = fct_reorder(site, order), y = length)) +
-  theme_classic() +
-    ylab("Time abandoned (years)") + xlab("Site") +
-  geom_violin(scale = "width", alpha = 0.5) +
-  # geom_boxplot(width=0.2) + 
-  # geom_jitter(height = 0.5, width = 0.2, alpha = 0.2) + 
-  # stat_summary(fun.y = mean, geom = "point", size = 3, color = "red") + 
-  # stat_summary(fun.y = median, geom = "point", size = 2, color = "blue") +
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 330, vjust = 1, hjust = 0),
-        plot.caption = element_text(face = "italic"))
-
-
-
-
-# original plot, with the violin plots
-ggplot(data = mean_length_df %>%
-           filter(abn_threshold == "5") %>%
-           mutate(site = capwords(ifelse(grepl("herze", site, ignore.case = TRUE),
-                                         gsub("_", " & ", site),
-                                  ifelse(grepl("bel", site, ignore.case = TRUE),
-                                         gsub("belarus", "Belarus/Smolensk", site),
-                                  ifelse(grepl("goias", site, ignore.case = TRUE),
-                                         gsub("goias", "Goiás", site),
-                                  ifelse(grepl("shaanxi", site, ignore.case = TRUE),
-                                         gsub("shaanxi", "Shaanxi/Shanxi", site),
-                                         gsub("_", " ", site))))))),
-         mapping = aes(x = fct_reorder(site, order), #fct_reorder2(site, abn_threshold, desc(mean_duration)),
-                       y = mean_duration, 
-                       color = length_type)) + 
+gg_mean_w_violin <-
+  ggplot() + 
   theme_classic() +
   theme(axis.text.x = element_text(angle = 330, vjust = 1, hjust = 0),
         plot.caption = element_text(face = "italic")) +
-  labs(#title = "Mean length of abandonment",
-       #caption = "Counting only recultivation of 2 or more continuous years",
-       linetype = NULL,
+  labs(linetype = NULL,
        color = "Mean of:", 
        y = "Mean abandonment duration (years)", 
        x = "Site") +
-  geom_point(size = 2, alpha = 0.85) + 
+  geom_jitter(data = vt, 
+              mapping = aes(x = fct_reorder(site, order), y = length),
+              height = 0.5, width = 0.2, alpha = 0.025) +
+  
+  geom_violin(data = vt, 
+              mapping = aes(x = fct_reorder(site, order), y = length), scale = "width", alpha = 0) +
+  
+  geom_point(data = mean_length_df %>%
+           filter(abn_threshold == "5"),
+             mapping = aes(x = fct_reorder(site, order), y = mean_duration, color = length_type),
+             size = 3, alpha = 0.85) + 
+  
   geom_hline(data = mean_length_df %>% 
                group_by(abn_threshold, length_type) %>%
                summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>% 
@@ -274,19 +260,134 @@ ggplot(data = mean_length_df %>%
              mapping = aes(yintercept = overall_mean, 
                            col = length_type, 
                            linetype = "Mean \nAcross \nSites")) + 
+  
   scale_linetype_manual(values = c("Mean \nAcross \nSites" = "dashed")) + 
   scale_color_discrete(labels = c(all = "All periods", 
                                    max = "Max. length \nper pixel")) +
-  # scale_shape_manual(values = c(16, 21), # filled and closed circles
-  #                    labels = c(all = "All periods", 
-  #                               max = "Max. length \nper pixel")) + 
-  guides(color = guide_legend(order = 1))
+  scale_x_discrete(breaks = site_df$site,
+                   labels = site_df$description) +
+  guides(color = guide_legend(order = 1)) + 
+  scale_y_continuous(breaks = c(5, 10, 15, 20, 25, 30))
+
+
+ggsave(plot = gg_mean_w_violin,
+       filename = paste0(p_plots, run_label, "/mean_lengths_w_violin", run_label, ".pdf"), 
+    width = 6, height = 5, units = "in")
+
+
+
+```
+
+```{r ridges}
+install.packages("ggridges")
+library(ggridges)
+
+vt
+
+ggplot(iris, aes(x = Sepal.Length, y = Species, group = Species)) + 
+  geom_density_ridges(fill = "#00AFBB") + 
+  theme_classic()
+
+gg_mean_length_ridges <-
+  ggplot() +
+  
+  geom_density_ridges2(
+    data = vt, 
+    mapping = aes(y = fct_reorder(site, desc(order)), x = length, group = site),
+    stat = "binline", bins = 26,
+    scale = 0.95) + 
+  
+  geom_vline(data = mean_length_df %>% 
+               group_by(abn_threshold, length_type) %>%
+               summarise(overall_mean = mean(mean_duration, na.rm = TRUE)) %>% 
+               filter(abn_threshold == "5"),
+             mapping = aes(xintercept = overall_mean, 
+                           col = length_type, 
+                           linetype = "Mean \nAcross \nSites")) + 
+  scale_linetype_manual(values = c("Mean \nAcross \nSites" = "dashed")) +
+  
+  geom_point(data = mean_length_df %>%
+           filter(abn_threshold == "5"),
+             mapping = aes(y = fct_reorder(site, desc(order)),
+                           x = mean_duration, 
+                           color = length_type),
+             size = 3, alpha = 0.85) + 
+  scale_color_discrete(labels = c(all = "All periods",
+                                   max = "Maximum length per pixel")) +
+
+  scale_y_discrete(expand = c(0.02, 0),
+                   labels = c("belarus" = "Vitebsk, Belarus/\nSmolensk, Russia",
+                              "bosnia_herzegovina" = "Bosnia &\n Herzegovina",
+                              "chongqing" = "Chongqing,\n China",
+                              "goias" = "Goiás, Brazil",
+                              "iraq" = "Iraq",
+                              "mato_grosso" = "Mato Grosso, Brazil",
+                              "nebraska" = "Nebraska/\nWyoming, USA",
+                              "orenburg" = "Orenburg, Russia/\nUralsk, Kazakhstan",
+                              "shaanxi" = "Shaanxi/Shanxi,\n China",
+                              "volgograd" = "Volgograd, Russia",
+                              "wisconsin" = "Wisconsin, USA")) +
+  # scale_y_discrete(breaks = site_df$site, 
+  #                  labels = site_df$description) + 
+  
+  scale_x_continuous(breaks = c(5, 10, 15, 20, 25, 30), expand = c(0, 0)) + 
+  theme_classic() +
+  labs(y = "Site", x = "Mean abandonment duration (years)",
+       color = "Mean of:", linetype = ""
+       ) + 
+  theme(legend.position = "bottom",
+        legend.margin=margin(),
+        axis.text.y = element_text(vjust = 0),
+        panel.grid.major.x = element_line()
+        ) + 
+  guides(color = guide_legend(order = 1, nrow = 2, override.aes = list(linetype = 0)
+                              ), 
+         linetype = guide_legend(order = 2)) + 
+  
+  coord_cartesian(clip = "off")
+
+
+gg_mean_length_ridges
+
+ggsave(plot = gg_mean_length_ridges,
+       filename = paste0(p_plots, run_label, "/mean_lengths_w_ridges_hist", run_label, ".pdf"), 
+    width = 4.75, height = 6, units = "in")
 
 
 
 
 ```
 
+```{r histograms}
+
+gg_raw_hist <- ggplot(data = filter(length_distill_df, #site == site_df$site[9], 
+                     length_type == "all",
+                     length >= 5)) + 
+    theme_classic() +
+    xlab("Time abandoned (years)") + ylab(expression("Count  (10"^{6}*" pixels)")) +
+    geom_col(mapping = aes(x = length, y = freq/(10^6))) +
+    facet_grid(rows = vars(site), scales = "free") +
+    
+    theme(#legend.position = c(0.85, 0.95)
+          ) + 
+  scale_x_continuous(breaks = seq(from = 5, to = 30, by = 5))
+
+ggsave(plot = gg_raw_hist, 
+       filename = paste0(p_plots, run_label, "/mean_lengths_default_hist", run_label, ".pdf"), 
+    width = 5, height = 8, units = "in")
+
+ggplot() +
+  geom_density_ridges(
+    data = vt, 
+    mapping = aes(y = site, x = length, group = site),
+    stat = "binline", bins = 26,
+    scale = 0.95,
+    draw_baseline	= FALSE
+    ) + 
+  theme_ridges()
+
+
+```
 
 
 ```{r plot-mean-abn-duration}
@@ -301,16 +402,7 @@ if(!dir.exists(paste0(p_output, "plots/", run_label))) {
 
 gg_mean_length <-
   ggplot(data = mean_length_df %>%
-           filter(abn_threshold == "5") %>%
-           mutate(site = capwords(ifelse(grepl("herze", site, ignore.case = TRUE),
-                                         gsub("_", " & ", site),
-                                  ifelse(grepl("bel", site, ignore.case = TRUE),
-                                         gsub("belarus", "Belarus/Smolensk", site),
-                                  ifelse(grepl("goias", site, ignore.case = TRUE),
-                                         gsub("goias", "Goiás", site),
-                                  ifelse(grepl("shaanxi", site, ignore.case = TRUE),
-                                         gsub("shaanxi", "Shaanxi/Shanxi", site),
-                                         gsub("_", " ", site))))))),
+           filter(abn_threshold == "5"),
          mapping = aes(x = fct_reorder(site, order), #fct_reorder2(site, abn_threshold, desc(mean_duration)),
                        y = mean_duration, 
                        color = length_type)) + 
@@ -337,14 +429,17 @@ gg_mean_length <-
   # scale_shape_manual(values = c(16, 21), # filled and closed circles
   #                    labels = c(all = "All periods", 
   #                               max = "Max. length \nper pixel")) + 
+  scale_x_discrete(breaks = site_df$site,
+                   labels = site_df$description) +
+  scale_y_continuous(breaks = c(12:20)) + 
   guides(color = guide_legend(order = 1))
     
 
 
 # ----------------- save ---------------- #
 ggsave(plot = gg_mean_length,
-       filename = paste0(p_plots, run_label, "/mean_lengths", run_label, ".pdf"), 
-    width = 5, height = 4.5, units = "in")
+       filename = paste0(p_plots, run_label, "/mean_lengths_long", run_label, ".pdf"), 
+    width = 5.5, height = 5, units = "in")
 
 # png(filename = paste0(p_output, "plots/", run_label, "/mean_lengths", run_label, ".png"), 
 #     # width = 6, height = 5, 
@@ -441,6 +536,178 @@ for (i in 1:11) {
 
 ## Area abandoned at some point during the time series
 
+```{r total-possible-cropland}
+
+# 
+# tic()
+# tt_area <- expanse(total_crop_mask, unit = "ha")
+# toc() # much much faster than the cellSize %>% global() method below, but crashes with the full site rasters (except shaanxi, for some reason)
+# 
+# tic()
+# tt_cell_areas <- cellSize(total_crop_mask, unit = "ha", mask = TRUE)
+# global(tt_cell_areas, fun = "sum", na.rm = TRUE)
+# toc()
+
+# ------------------------------------------------------ #
+# trying this for all rasters:
+# ------------------------------------------------------ #
+tmpFiles(current = T, remove = TRUE)
+
+# prepared input rasters (derived by Chris)
+site_input_raster_files <- list.files(paste0(p_dat_derived, "input_rasters"), full.names = TRUE) %>%
+  grep(".tif", ., value = TRUE) #%>% grep("age", ., value = TRUE, invert = TRUE)
+
+
+lc <- lapply(seq_along(site_input_raster_files), function(i) {rast(site_input_raster_files[i])})
+names(lc) <- site_df$site
+
+# rename raster layers:
+for (i in 1:11) {
+  if (names(lc[i]) == "nebraska") {
+    names(lc[[i]]) <- paste0("y", 1986:2018)
+  } else {
+    if (names(lc[i]) == "wisconsin") {
+      names(lc[[i]]) <- paste0("y", 1987:2018)
+    } else {
+      # everything else, just 1987:2017
+      names(lc[[i]]) <- paste0("y", 1987:2017)
+    }}}
+
+
+tic()
+lc_total_crop_mask <- lapply(lc, function(x) {
+  reclassified <- classify(x, rcl = tribble(
+  ~"is", ~"becomes", 
+  0, NA,
+  1, NA,
+  2, NA,
+  3, 1,
+  4, NA))
+  
+  lc_crop_mask <- max(reclassified, na.rm = TRUE)
+  rm(reclassified)
+  tmpFiles(current = T, remove = TRUE)
+
+  lc_crop_mask
+})
+toc()
+# 2101 seconds
+
+# create directory, if it doesn't exist yet:
+if(!dir.exists(paste0(p_dat_derived, "total_crop_mask/"))) {
+  dir.create(paste0(p_dat_derived, "total_crop_mask/"))
+}
+
+# write new total_crop_mask rasters to file:
+lapply(1:11, function(i) {
+  writeRaster(lc_total_crop_mask[[i]], 
+              filename = paste0(p_dat_derived, "total_crop_mask/", 
+                                site_df$site[i], "_total_crop_mask.tif")
+              )
+  }
+  )
+
+# reload
+total_crop_mask_files <- list.files(paste0(p_dat_derived, "total_crop_mask"), full.names = TRUE)
+lc_total_crop_mask <- lapply(
+  seq_along(total_crop_mask_files), 
+  function(i) {
+    rast(total_crop_mask_files[i])
+    })
+
+names(lc_total_crop_mask) <- site_df$site
+
+for(i in 1:11) {
+  print(names(lc_total_crop_mask[i]))
+  print(freq(lc_total_crop_mask[[i]]))
+  }
+
+
+# this seems to crash with the larger places. so, try the manual method of calculating cellSize
+# expanse(lc_total_crop_mask$shaanxi, unit = "ha")
+
+# terra method (this yields a different area estimation than raster:area(), due to different cell sizes)
+lc_total_crop_mask_area_ha_terra <- sapply(1:11, function(i) {
+  size <- cellSize(lc_total_crop_mask[[i]], unit = "ha", mask = FALSE)
+  product <- size * lc_total_crop_mask[[i]]
+  area_ha <- global(product, fun = "sum", na.rm = TRUE)
+  
+  as.numeric(area_ha)
+  })
+
+# raster method
+tic()
+lc_total_crop_mask_area_ha_raster <- sapply(1:11, function(i) {
+  # calculate area raster
+  bin <- raster(lc_total_crop_mask[[i]])
+  size <- raster::area(bin)
+  product <- size * bin
+  area_ha <- cellStats(product, "sum") * 100
+  area_ha
+  })
+toc()
+
+raster(lc_total_crop_mask[[i]])
+lc_total_crop_mask[[i]]
+lc_total_crop_mask_area_ha_terra / 
+lc_total_crop_mask_area_ha_raster
+
+total_crop_mask <- tibble(site = site_df$site,
+       total_crop_extent_ha_t = lc_total_crop_mask_area_ha_terra,
+       total_crop_extent_ha_r = lc_total_crop_mask_area_ha_raster
+       )
+
+```
+
+```{r area-reprex}
+library(reprex)
+library(raster)
+library(terra)
+
+# make test raster with raster::raster()
+a <- raster::raster(ncols = 100, nrows = 100,
+            xmn = -84, xmx = -83, 
+            ymn = 42, ymx = 43)
+
+# make test raster with terra::rast()
+b <- terra::rast(ncols = 100, nrows = 100, 
+          xmin = -84, xmax = -83, 
+          ymin = 42, ymax = 43)
+
+# give them some values
+# values(a) <- 1:ncell(a)
+# values(b) <- 1:ncell(b)
+
+# calculate cell areas (km2)
+a_area <- raster::area(a) # km by default
+b_area <- terra::cellSize(b, unit = "km")
+
+# sum across cells
+a_sum <- raster::cellStats(a_area, "sum")
+b_sum <- terra::global(b_area, fun = "sum")
+
+a_sum
+b_sum
+
+# note that this terra workflow yields the same answer as terra::expanse()
+terra::expanse(b, unit = "km")
+
+
+sessionInfo()
+packageVersion("raster")
+packageVersion("terra")
+
+
+
+# Note: I know that terra::expanse() accomplishes the same thing as cellSize() coupled with global(fun = "sum"), and is substantially faster... but expanse() has repeatedly caused RStudio to crash when attempting to use with large rasters (20M to 100M cells).
+
+
+reprex(venue = "so")
+
+
+```
+
+
 ```{r area-abn-summary}
 
 # 1. Calculate area abandoned summary stats:
@@ -463,35 +730,52 @@ area_summary_df <-
 # ----------------------------------------------------------- #
 # 2. Calculate the area at each site that is abandoned at any point during the time series (>= 5 years)
 # ----------------------------------------------------------- #
+tic()
 area_ever_abn <- lapply(1:11, function(i) {
   bin <- max_age_r[[i]]
-  names(bin) <- paste0(site_df$site[i], "_", names(bin))
+  # names(bin) <- paste0(site_df$site[i], "_", names(bin))
   #plot(bin)
+  
   bin[bin < 5] <- 0 # exclude short-term fallowing:
   # bin[bin < 5] <- NA
   bin[bin >= 5] <- 1
   # plot(bin)
+
   # calculate area raster
   area_r <- raster::area(bin)
+  # area_r <- cellSize(bin, unit = "ha", mask = FALSE, transform = FALSE)
   # plot(area_r)
-  
+
   bin_area <- bin * area_r
   # plot(bin_area)
-  
 
   tibble(site = site_df$site[i],
          area_ever_abn_ha = cellStats(bin_area, "sum") * 100 # to convert to ha
+         # area_ever_abn_ha = global(bin_area, fun = "sum", na.rm = TRUE) %>% as.numeric()
   )
   }
 ) %>% bind_rows()
+toc() # about 350 seconds
+
+area_ever_abn_original
+area_ever_abn2
+area_ever_abn
+area_ever_abn3
+identical(area_ever_abn, area_ever_abn3)
+
+
+area_ever_abn %>% summarise(total_ever_abn_Mha = sum(area_ever_abn_ha))
+# area_ever_abn3 %>% summarise(total_ever_abn_Mha = sum(area_ever_abn_ha))
 
 
 # ----------------------------------------------------------- #
-# 
+# 3. Total extent of all cropland ever cultivated during time series
 # ----------------------------------------------------------- #
+total_crop_mask
+
 
 # ---------------------------------------------------------------------- #
-# 3. What percentage of the abandonment periods are recultivated?
+# 4. What percentage of the abandonment periods are recultivated?
 # ---------------------------------------------------------------------- #
 
 persistence_dat %>% filter(site == "shaanxi", year == 2017)
@@ -518,21 +802,30 @@ area_recultivated_df <-
 
 area_summary_df <- area_summary_df %>% 
   left_join(., area_ever_abn, by = c("site")) %>%
+  left_join(., total_crop_mask, by = c("site")) %>%
   left_join(., area_recultivated_df, by = c("site"))
 
 
 # calculate area as various proportions
-
+names()
 area_summary_df <- area_summary_df %>%
   mutate(area_as_prop_site = area_abn_ha_2017/total_site_area_ha_2017,
-         area_as_prop_crop = area_abn_ha_2017/cropland_area_1987)
+         area_as_prop_total_crop = area_abn_ha_2017/total_crop_extent_ha_r,
+         area_as_prop_crop87 = area_abn_ha_2017/cropland_area_1987)
 
 # ----------------------------------------------------------- #
 # save the summary file
 # ----------------------------------------------------------- #
 write_csv(area_summary_df, file = paste0(p_dat_derived, run_label, "/", "area_summary_df", run_label, ".csv"))
 # area_summary_df <- read_csv(file = paste0(p_dat_derived, run_label, "/", "area_summary_df", run_label, ".csv"))
+
 ```
+
+
+
+
+
+
 
 ## How much area is abandoned, total?
 
@@ -576,6 +869,9 @@ ggsave(plot = gg_area_lc_facet_grid,
     width = 7, height = 5, units = "in"
 )
 ```
+
+
+
 
 ```{r area-abn-as-prop-cropland}
 # what proportion of cropland five years ago is abandoned each year?
@@ -729,7 +1025,7 @@ ggsave(plot = plot_grid(area_a, area_b, area_c, area_d,
 
 ```{r prop-recultivated}
 # see chunk: area-abn-summary
-area_recultivated_df
+area_recultivated_df %>% arrange(proportion_recultivated)
 
 area_summary_df %>% names
 
